--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,4 +32,7 @@
     <!-- Permissions -->
 
     <uses-permission android:name="android.permission.INTERNET" />
+    
+    <!-- Advertising ID permission required for AdSense/AdMob -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 </manifest>
