added Google AdMob, using Java 21

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,15 +23,26 @@ allprojects {
         mavenCentral()
     }
     
-    // Override Java version for all subprojects (including Capacitor)
+    // Configure Java 21 toolchain for all projects (required by Capacitor 7 and AdMob)
+    // This allows using Java 21 for the build while keeping system Java at 17
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
             project.android {
                 compileOptions {
-                    sourceCompatibility JavaVersion.VERSION_17
-                    targetCompatibility JavaVersion.VERSION_17
+                    sourceCompatibility JavaVersion.VERSION_21
+                    targetCompatibility JavaVersion.VERSION_21
                 }
             }
+        }
+        // Set Kotlin JVM target to 21 to match Java
+        try {
+            project.tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+                kotlinOptions {
+                    jvmTarget = "21"
+                }
+            }
+        } catch (Exception e) {
+            // Kotlin plugin not applied yet
         }
     }
 }
