--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,15 +12,15 @@ android {
     compileSdk rootProject.ext.compileSdkVersion
     
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
     
     defaultConfig {
         applicationId "com.idatagear.tictactoetoe"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
+        versionCode 7
         versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
@@ -67,17 +67,15 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    
+    // Google AdMob SDK
+    implementation 'com.google.android.gms:play-services-ads:23.5.0'
 }
 
 apply from: 'capacitor.build.gradle'
 
-// Override Capacitor's Java 21 requirement with Java 17
-android {
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-}
+// Java 21 toolchain is configured at the project level
+// This allows using Java 21 features while keeping system Java at 17
 
 try {
     def servicesJSON = file('google-services.json')
