--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,3 +20,10 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
+# Kotlin JVM target compatibility
+kotlin.jvm.target.validation.mode=warning
+
+# Configure Java 21 toolchain for Gradle builds
+# This allows using Java 21 features while keeping system Java at 17
+org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.9.10-hotspot
